# caninstein3d

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  STATUS.md  build_wasm.sh  run.sh  shell.html
.claude/: settings.local.json
.github/workflows/: deploy-wasm.yml
data/maps/: test.map
include/: combat.h  enemy.h  engine.h  hud.h  image_loader.h  input.h  map.h  minimap.h  pickup.h  player.h  raycaster.h  sound.h  sprite.h  texture.h  weapon.h
src/: main.c
src/assets/: image_loader.c  sprite.c  texture.c
src/audio/: sound.c
src/combat/: combat.c  weapon.c
src/core/: engine.c
src/entities/: enemy.c
src/input/: input.c
src/map/: map.c  map_loader.c
src/player/: player.c
src/renderer/: hud.c  minimap.c  raycaster.c  sprite_renderer.c
src/systems/: pickup.c
